// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createUser should create a user with firstName and lastName only 1`] = `
{
  "email": "",
  "firstName": "John",
  "lastName": "Doe",
  "password": "password",
  "phone": "",
  "type": "USER",
}
`;

exports[`createUser should create a user with firstName, lastName, and email 1`] = `
{
  "email": "dummy@email.com",
  "firstName": "John",
  "lastName": "Doen",
  "password": "password",
  "phone": "",
  "type": "USER",
}
`;

exports[`createUser should create a user with firstName, lastName, and phone 1`] = `
{
  "email": "",
  "firstName": "Anton",
  "lastName": "Doe",
  "password": "password",
  "phone": "123-456-7890",
  "type": "USER",
}
`;
